--- a/Module_JavaSpringBoot_Day5_02/src/main/resources/templates/home.html
+++ b/Module_JavaSpringBoot_Day5_02/src/main/resources/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org">
 <head>
-    <title>Hai Phong</title>
+    <title>Home</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<div th:replace="/fragment/header"></div>
+<div th:replace="fragment/header.html"></div>
 <div class="container-fluid">
 
 
@@ -107,7 +107,6 @@
     <div class="container">
 
     </div>
-    <div th:replace="fragment/footer.html"></div>
 
 </div>
 
