--- a/Module_JavaSpringBoot_Day5_02/src/main/resources/templates/index.html
+++ b/Module_JavaSpringBoot_Day5_02/src/main/resources/templates/index.html
@@ -1,10 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
+
 </head>
 <body>
+<div class="container">
+    <br><br>
+<!--    <a th:href="@{/edit-person?id=0}">Insert New Person</a>-->
+    <form th:action="@{/edit-person}" th:method="get">
+        <button type="submit" class="btn btn-primary" th:value="0" name="id" >Insert New Person</button>
+    </form>
+    <br>
+    <table class="table">
+        <thead class="thead-light">
+        <tr>
+            <td>ID</td>
+            <td>Name</td>
+            <td>Address</td>
+            <td colspan="2"></td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="items : ${ListPerson}">
+            <td th:text="${items.id}"></td>
+            <td th:text="${items.name}"></td>
+            <td th:text="${items.address}"></td>
+            <td>
+                <a th:href="|@{/edit-person?id=}${items.id}|">Edit</a>
+            </td>
+            <td>
+                <a th:href="|@{/delete-person?id=}${items.id}|"> Delete</a>
+            </td>
+        </tr>
+
+        </tbody>
+    </table>
+    <nav aria-label="Page navigation example">
+        <ul class="demo">
+<!--            <li class="page-item"><a class="page-link" href="#">Previous</a></li>-->
+<!--            <li class="page-item"><a class="page-link" href="#">1</a></li>-->
+<!--            <li class="page-item"><a class="page-link" href="#">2</a></li>-->
+<!--            <li class="page-item"><a class="page-link" href="#">3</a></li>-->
+<!--            <li class="page-item"><a class="page-link" href="#">Next</a></li>-->
+        </ul>
+    </nav>
+
+    <div class="container">
+        <nav aria-label="Page navigation">
+            <ul class="pagination" id="pagination"></ul>
+        </nav>
+    </div>
+</div>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js"></script>
+<script th:src="@{/js/jquery.twbsPagination.js}" type="text/javascript"></script>
+<script type="text/javascript">
+    $(function () {
+
+        window.pagObj = $('#pagination').twbsPagination({
+            totalPages: 35,
+            visiblePages: 10,
+            onPageClick: function (event, page) {
+                console.info(page + ' (from options)');
+            }
+        }).on('page', function (event, page) {
+            console.info(page + ' (from event listening)');
+        });
+    });
+</script>
 
 </body>
+
+
+
 </html>
