--- a/Module_JavaSpringBoot_Day5_02/src/main/resources/templates/index.html
+++ b/Module_JavaSpringBoot_Day5_02/src/main/resources/templates/index.html
@@ -52,6 +52,7 @@
     <div class="container">
         <nav aria-label="Page navigation">
             <ul class="pagination" id="pagination"></ul>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
         </nav>
     </div>
 </div>
