--- a/Module_JavaSpringBoot_Day5_02/src/main/resources/templates/list_product.html
+++ b/Module_JavaSpringBoot_Day5_02/src/main/resources/templates/list_product.html
@@ -7,6 +7,15 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+
+
+
+<!--    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js"></script>
+
     <link th:href="@{/css/style.css}" rel="stylesheet" media="screen">
 
 </head>
@@ -35,8 +44,6 @@
                     <button type="submit" class="btn btn-success" value="0" name="id_pr_edit" >Create new Product</button>
                 </form>
                 <br>
-
-
                 <table class="table table-striped" style="padding: 25px;">
                     <thead>
                     <tr>
@@ -81,17 +88,56 @@
                     </tr>
                     </tbody>
                 </table>
+                <form th:action="@{/admin/list}" id="formSubmit" method="get">
+                    <div class="container">
+                        <nav aria-label="Page navigation">
+                            <ul class="pagination" id="pagination"></ul>
+                        </nav>
+                    </div>
+
+
+                    <input type="hidden" id="page" name="page" th:value="${page}"/>
+                    <input type="hidden" id="limit" name="limit" th:value="${limit}">
+
+
+                </form>
+                <input type="hidden" id="totalPage"name="totalPage" th:value="${totalPage}">
 
             </div>
         </div>
     </div>
 
-
-    <div class="container">
-
-    </div>
-
 </div>
+
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js"></script>
+
+<script th:src="@{/js/jquery.twbsPagination.js}" type="text/javascript"></script>
+<script type="text/javascript">
+    var totalPage = $('#totalPage').val();
+    var currentPage = $('#page').val();
+    var limit = $('#limit').val();
+    $(function () {
+        window.pagObj = $('#pagination').twbsPagination({
+            totalPages : totalPage,
+            startPage : currentPage,
+            onPageClick: function (event, page) {
+                if (currentPage != page) {
+                    $('#limit').val(limit);
+                    $('#page').val(page);
+                    $('#formSubmit').submit();
+                }
+            }
+        }).on('page', function (event, page) {
+
+        });
+    });
+</script>
 
 </body>
 </html>
