--- a/Module_JavaSpringBoot_Day18_01_Security/src/main/resources/templates/login.html
+++ b/Module_JavaSpringBoot_Day18_01_Security/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
         </div>
         <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1" name="remember-me">
             <label class="form-check-label" for="exampleCheck1">Remember me</label>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
