--- a/Module_JavaSpringBoot_Day21_01_SendMailResetPassWord/src/main/resources/templates/login.html
+++ b/Module_JavaSpringBoot_Day21_01_SendMailResetPassWord/src/main/resources/templates/login.html
@@ -11,8 +11,9 @@
 <main>
   <div class="row">
     <div class="colm-logo">
-      <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Logo">
-      <h2>Facebook helps you connect and share with the people in your life.</h2>
+<!--      <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Logo">-->
+<!--      <h2>Facebook helps you connect and share with the people in your life.</h2>-->
+      <h1>Hello, Phong nè ! Login đi nào :)</h1>
     </div>
     <div class="colm-form">
       <div class="form-container">
@@ -28,26 +29,26 @@
 </main>
 <footer>
   <div class="footer-contents">
-    <ol>
-      <li>English (UK)</li>
-      <li><a href="#">മലയാളം</a></li>
-      <li><a href="#">தமிழ்</a></li>
-      <li><a href="#">తెలుగు</a></li>
-      <li><a href="#">বাংলা</a></li>
-      <li><a href="#">اردو</a></li>
-      <li><a href="#">हिन्दी</a></li>
-      <li><a href="#">ಕನ್ನಡ</a></li>
-      <li><a href="#">Español</a></li>
-      <li><a href="#">Português (Brasil)</a></li>
-      <li><a href="#">Français (France)</a></li>
-      <li><button>+</button></li>
+<!--    <ol>-->
+<!--      <li>English (UK)</li>-->
+<!--      <li><a href="#">മലയാളം</a></li>-->
+<!--      <li><a href="#">தமிழ்</a></li>-->
+<!--      <li><a href="#">తెలుగు</a></li>-->
+<!--      <li><a href="#">বাংলা</a></li>-->
+<!--      <li><a href="#">اردو</a></li>-->
+<!--      <li><a href="#">हिन्दी</a></li>-->
+<!--      <li><a href="#">ಕನ್ನಡ</a></li>-->
+<!--      <li><a href="#">Español</a></li>-->
+<!--      <li><a href="#">Português (Brasil)</a></li>-->
+<!--      <li><a href="#">Français (France)</a></li>-->
+<!--      <li><button>+</button></li>-->
 
 
 
 
 
-    </ol>
-    <small>Facebook © 2022</small>
+<!--    </ol>-->
+<!--    <small>Facebook © 2022</small>-->
   </div>
 </footer>
 </body>
