--- a/Module_JavaSpringBoot_Day22_01_Practice/src/main/resources/templates/home.html
+++ b/Module_JavaSpringBoot_Day22_01_Practice/src/main/resources/templates/home.html
@@ -32,20 +32,77 @@
         <p class="text-danger">[[${message}]]</p>
     </div>
 
-    <div class="row">
+    <div class="row" id="listProduct">
 
-        <div class="col-sm" th:each="items : ${listProduct}">
-            <p th:text="${items.name}"></p>
-            <p th:text="${items.price}"></p>
-            <p th:text="${items.description}"></p>
-            <a th:href="|@{/user/add-to-cart?id-product=}${items.id}|">Add to cart</a>
+        <div class="col-sm" >
         </div>
 
     </div>
+
+    <div class="container" style="margin-top: 50px;">
+        <nav aria-label="Page navigation">
+            <ul class="pagination" id="pagination"></ul>
+        </nav>
+    </div>
+    <input type="hidden" id="page" name="page" th:value="${pageable.pageNumber}"/>
+    <input type="hidden" id="limit" name="limit" th:value="${pageable.pageSize}">
+    <input type="hidden" id="totalPage"name="totalPage" th:value="${totalPage}">
+
 </div>
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+<script th:src="@{/js/jquery.twbsPagination.js}" type="text/javascript"></script>
+<script>
+    var totalPage = $('#totalPage').val();
+    var currentPage = $('#page').val();
+    var limit = $('#limit').val();
+    $(function () {
+        window.pagObj = $('#pagination').twbsPagination({
+            totalPages : totalPage,
+            startPage : currentPage,
+            onPageClick: function (event, page) {
+                if (currentPage != page) {
+                    getProduct(page,limit);
+                }else {
+                    getProduct(1,limit);
+                }
+            }
+        });
+        function getProduct(page,limit) {
+            $.ajax({
+                url : '/data-pagination?page='+page+'&size=' +limit,
+                type : 'GET',
+                contentType : 'application/json',
+                dataType : 'json',
+                success : function(result) {
+                    $("#listProduct div").remove();
+                    const objs = result.content;
+                    objs.map(pro =>{
+                        $("#listProduct").append(`
+                            <div class="col-sm">
+                            <img src="/images/${pro.image}" alt="" style="width:200px;height: 200px;margin-bottom:25px;">
+                            <p>${pro.name}</p>
+                            <p>${pro.price}</p>
+                            <p>${pro.description}</p>
+                            <a href="/user/add-to-cart?id-product=${pro.id}">Add to cart</a>
+                            </div>
+                        `);
+                    })
+                },
+                error : function(error) {
+                    alert(error)
+                }
+            });
+        }
+
+    });
+
+</script>
 </body>
 </html>
